CountRealationshipsTest was fixed.