@@ -1,15 +1,13 @@
 package com.jetbrains.youtrack.db.internal.client.remote.message;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
 
 import com.jetbrains.youtrack.db.internal.DbTestBase;
 import com.jetbrains.youtrack.db.internal.core.db.record.RecordOperation;
 import com.jetbrains.youtrack.db.internal.core.id.RecordId;
-import com.jetbrains.youtrack.db.internal.core.record.RecordInternal;
+import com.jetbrains.youtrack.db.internal.core.record.RecordAbstract;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import com.jetbrains.youtrack.db.internal.core.serialization.serializer.record.binary.RecordSerializerNetworkFactory;
 import com.jetbrains.youtrack.db.internal.core.serialization.serializer.record.binary.RecordSerializerNetworkV37;
@@ -18,6 +16,7 @@ import com.jetbrains.youtrack.db.internal.core.storage.ridbag.ridbagbtree.RidBag
 import com.jetbrains.youtrack.db.internal.core.tx.FrontendTransactionIndexChanges;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,13 +29,11 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
   @Test
   public void testBeginTransactionEmptyWriteRead() throws IOException {
     var channel = new MockChannel();
-    var request = new BeginTransactionRequest(session, 0, false,
-        true, null);
+    var request = new BeginTransaction38Request(session, 0, null);
     request.write(session, channel, null);
     channel.close();
-    var readRequest = new BeginTransactionRequest();
+    var readRequest = new BeginTransaction38Request();
     readRequest.read(session, channel, 0, null);
-    assertFalse(readRequest.isHasContent());
   }
 
   @Test
@@ -44,18 +41,15 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
 
     List<RecordOperation> operations = new ArrayList<>();
     operations.add(new RecordOperation(new EntityImpl(session), RecordOperation.CREATED));
-    Map<String, FrontendTransactionIndexChanges> changes = new HashMap<>();
-
     var channel = new MockChannel();
     var request =
-        new BeginTransactionRequest(session, 0, true, true, operations);
+        new BeginTransaction38Request(session, 0, operations);
     request.write(session, channel, null);
 
     channel.close();
 
-    var readRequest = new BeginTransactionRequest();
+    var readRequest = new BeginTransaction38Request();
     readRequest.read(session, channel, 0, RecordSerializerNetworkFactory.current());
-    assertTrue(readRequest.isUsingLog());
     assertEquals(1, readRequest.getOperations().size());
     assertEquals(0, readRequest.getTxId());
   }
@@ -67,14 +61,13 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
     Map<String, FrontendTransactionIndexChanges> changes = new HashMap<>();
 
     var channel = new MockChannel();
-    var request = new Commit37Request(session, 0, true, true, operations);
+    var request = new Commit38Request(session, 0, operations);
     request.write(session, channel, null);
 
     channel.close();
 
-    var readRequest = new Commit37Request();
+    var readRequest = new Commit38Request();
     readRequest.read(session, channel, 0, RecordSerializerNetworkFactory.current());
-    assertTrue(readRequest.isUsingLog());
     assertEquals(1, readRequest.getOperations().size());
     assertEquals(0, readRequest.getTxId());
   }
@@ -92,20 +85,20 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
     updatedRids.put(new RecordId(10, 20), new RecordId(10, 30));
     updatedRids.put(new RecordId(10, 21), new RecordId(10, 31));
 
-    var response = new Commit37Response(updatedRids, changes);
+    var response = new Commit37Response(0, updatedRids, Collections.emptyList(), changes, session);
     response.write(session, channel, 0, null);
     channel.close();
 
     var readResponse = new Commit37Response();
     readResponse.read(session, channel, null);
 
-    assertEquals(2, readResponse.getUpdatedRids().size());
+    assertEquals(2, readResponse.getOldToUpdatedRids().size());
 
-    assertEquals(new RecordId(10, 30), readResponse.getUpdatedRids().get(0).first());
-    assertEquals(new RecordId(10, 20), readResponse.getUpdatedRids().get(0).second());
+    assertEquals(new RecordId(10, 30), readResponse.getOldToUpdatedRids().getFirst().getFirst());
+    assertEquals(new RecordId(10, 20), readResponse.getOldToUpdatedRids().getFirst().getSecond());
 
-    assertEquals(new RecordId(10, 31), readResponse.getUpdatedRids().get(1).first());
-    assertEquals(new RecordId(10, 21), readResponse.getUpdatedRids().get(1).second());
+    assertEquals(new RecordId(10, 31), readResponse.getOldToUpdatedRids().get(1).getFirst());
+    assertEquals(new RecordId(10, 21), readResponse.getOldToUpdatedRids().get(1).getSecond());
 
     assertEquals(1, readResponse.getCollectionChanges().size());
     assertNotNull(readResponse.getCollectionChanges().get(val));
@@ -118,14 +111,13 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
   public void testEmptyCommitTransactionWriteRead() throws IOException {
 
     var channel = new MockChannel();
-    var request = new Commit37Request(session, 0, false, true, null);
+    var request = new Commit38Request(session, 0, null);
     request.write(session, channel, null);
 
     channel.close();
 
-    var readRequest = new Commit37Request();
+    var readRequest = new Commit38Request();
     readRequest.read(session, channel, 0, RecordSerializerNetworkFactory.current());
-    assertTrue(readRequest.isUsingLog());
     assertNull(readRequest.getOperations());
     assertEquals(0, readRequest.getTxId());
   }
@@ -136,10 +128,14 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
     List<RecordOperation> operations = new ArrayList<>();
     operations.add(new RecordOperation(new EntityImpl(session), RecordOperation.CREATED));
     var docOne = new EntityImpl(session);
-    RecordInternal.setIdentity(docOne, new RecordId(10, 2));
+    final var iIdentity1 = new RecordId(10, 2);
+    final var rec1 = (RecordAbstract) docOne;
+    rec1.setIdentity(iIdentity1);
 
     var docTwo = new EntityImpl(session);
-    RecordInternal.setIdentity(docTwo, new RecordId(10, 1));
+    final var iIdentity = new RecordId(10, 1);
+    final var rec = (RecordAbstract) docTwo;
+    rec.setIdentity(iIdentity);
 
     operations.add(
         new RecordOperation(docOne, RecordOperation.UPDATED));
@@ -148,21 +144,21 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
 
     var channel = new MockChannel();
     var response =
-        new FetchTransactionResponse(session, 10, operations, new HashMap<>());
+        new FetchTransaction38Response(10, new HashMap<>(), operations, session);
     response.write(session, channel, 0, RecordSerializerNetworkV37.INSTANCE);
 
     channel.close();
 
-    var readResponse = new FetchTransactionResponse();
+    var readResponse = new FetchTransaction38Response();
     readResponse.read(session, channel, null);
 
-    assertEquals(3, readResponse.getOperations().size());
-    assertEquals(RecordOperation.CREATED, readResponse.getOperations().get(0).getType());
-    assertNotNull(readResponse.getOperations().get(0).getRecord());
-    assertEquals(RecordOperation.UPDATED, readResponse.getOperations().get(1).getType());
-    assertNotNull(readResponse.getOperations().get(1).getRecord());
-    assertEquals(RecordOperation.DELETED, readResponse.getOperations().get(2).getType());
-    assertNotNull(readResponse.getOperations().get(2).getRecord());
+    assertEquals(3, readResponse.getRecordOperations().size());
+    assertEquals(RecordOperation.CREATED, readResponse.getRecordOperations().get(0).getType());
+    assertNotNull(readResponse.getRecordOperations().get(0).getRecord());
+    assertEquals(RecordOperation.UPDATED, readResponse.getRecordOperations().get(1).getType());
+    assertNotNull(readResponse.getRecordOperations().get(1).getRecord());
+    assertEquals(RecordOperation.DELETED, readResponse.getRecordOperations().get(2).getType());
+    assertNotNull(readResponse.getRecordOperations().get(2).getRecord());
     assertEquals(10, readResponse.getTxId());
   }
 
@@ -179,7 +175,7 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
     Map<String, FrontendTransactionIndexChanges> changes = new HashMap<>();
     var channel = new MockChannel();
     var response =
-        new FetchTransaction38Response(session, 10, operations, changes, new HashMap<>(), null);
+        new FetchTransaction38Response(10, new HashMap<>(), operations, session);
     response.write(session, channel, 0, RecordSerializerNetworkV37.INSTANCE);
 
     channel.close();
@@ -187,13 +183,13 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
     var readResponse = new FetchTransaction38Response();
     readResponse.read(session, channel, null);
 
-    assertEquals(3, readResponse.getOperations().size());
-    assertEquals(RecordOperation.CREATED, readResponse.getOperations().get(0).getType());
-    assertNotNull(readResponse.getOperations().get(0).getRecord());
-    assertEquals(RecordOperation.UPDATED, readResponse.getOperations().get(1).getType());
-    assertNotNull(readResponse.getOperations().get(1).getRecord());
-    assertEquals(RecordOperation.DELETED, readResponse.getOperations().get(2).getType());
-    assertNotNull(readResponse.getOperations().get(2).getRecord());
+    assertEquals(3, readResponse.getRecordOperations().size());
+    assertEquals(RecordOperation.CREATED, readResponse.getRecordOperations().get(0).getType());
+    assertNotNull(readResponse.getRecordOperations().getFirst().getRecord());
+    assertEquals(RecordOperation.UPDATED, readResponse.getRecordOperations().get(1).getType());
+    assertNotNull(readResponse.getRecordOperations().get(1).getRecord());
+    assertEquals(RecordOperation.DELETED, readResponse.getRecordOperations().get(2).getType());
+    assertNotNull(readResponse.getRecordOperations().get(2).getRecord());
     assertEquals(10, readResponse.getTxId());
   }
 
@@ -204,13 +200,13 @@ public class RemoteTransactionMessagesTest extends DbTestBase {
 
     var channel = new MockChannel();
     var response =
-        new FetchTransactionResponse(session, 10, operations, new HashMap<>());
+        new FetchTransaction38Response(10, new HashMap<>(), operations, session);
     response.write(session, channel, 0, RecordSerializerNetworkV37.INSTANCE);
 
     channel.close();
 
     var readResponse =
-        new FetchTransactionResponse(session, 10, operations, new HashMap<>());
+        new FetchTransaction38Response(10, new HashMap<>(), operations, session);
     readResponse.read(session, channel, null);
 
     assertEquals(10, readResponse.getTxId());
